# HarmonyOS_ChinaMobile

MyApp02/: build-profile.json5
MyApp02/AppScope/: app.json5
MyApp02/AppScope/resources/base/element/: string.json
MyApp02/waimai/src/main/: module.json5
MyApp02/waimai/src/ohosTest/: module.json5
MyApp04/AppScope/: app.json5
MyApp04/AppScope/resources/base/element/: string.json
MyApp04/waimai/src/main/: module.json5
MyApp05/AppScope/: app.json5
MyApp05/AppScope/resources/base/element/: string.json
MyApp06/: oh-package-lock.json5  oh-package.json5
MyApp06/AppScope/: app.json5
MyApp06/AppScope/resources/base/element/: string.json
MyApp06/waimai/: oh-package.json5
MyApp06/waimai/src/main/: module.json5
MyApp06/waimai/src/ohosTest/: module.json5
MyApp08/AppScope/: app.json5
MyApp08/AppScope/resources/base/element/: string.json
MyApp08/entry/: patch.json
MyApp08/entry/src/main/: module.json5
MyApp09/AppScope/: app.json5
MyApp09/AppScope/resources/base/element/: string.json
MyApp09/entry/src/main/: module.json5
MyApp82/: build-profile.json5
MyApp82/AppScope/: app.json5
MyApp82/waimai/: build-profile.json5  oh-package-lock.json5  oh-package.json5
MyApp82/waimai/src/main/: module.json5
MyApp82/waimai/src/main/cpp/: CMakeLists.txt  napi_init.cpp
MyApp82/waimai/src/main/cpp/types/libwaimai/: Index.d.ts  oh-package.json5
MyApp82/waimai/src/mock/: mock-config.json5
MyApp82/waimai/src/ohosTest/: module.json5
MyApplication/: Crash_81391843.dmp  build-profile.json5
MyApplication/AppScope/: app.json5
(+76 files in other folders)
